objects/wkitsm__CaseOwnerAuditTrail__c.object
<CustomObject>
    <description>Audit trail tracking changes in case owner field</description>
    <fields>
        <fullName>wkitsm__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Source case for this audit trail</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Owner Audit Trail</relationshipLabel>
        <relationshipName>CaseOwnerAuditTrail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>wkitsm__ChangeUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User that performed the case owner reassignment</description>
        <label>Change User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CaseOwnerAuditTrailUser</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>wkitsm__Duration__c</fullName>
        <description>Time, in seconds that the case was assigned to the most recent owner.</description>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wkitsm__NewOwner__c</fullName>
        <formula>IF(
    ISBLANK(  wkitsm__NewQueueId__c  ),
     wkitsm__NewUser__r.FirstName  &amp; &apos; &apos; &amp;   wkitsm__NewUser__r.LastName  ,
     wkitsm__NewQueueName__c  
)</formula>
        <label>New Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__NewQueueId__c</fullName>
        <label>New Queue Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__NewQueueName__c</fullName>
        <label>New Queue Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__NewUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CaseOwnerAuditTrailNewUser</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>wkitsm__PreviousOwner__c</fullName>
        <formula>IF(
    ISBLANK( wkitsm__PreviousQueueId__c ),
    wkitsm__PreviousUser__r.FirstName &amp; &apos; &apos; &amp;  wkitsm__PreviousUser__r.LastName ,
    wkitsm__PreviousQueueName__c 
)</formula>
        <label>Previous Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__PreviousQueueId__c</fullName>
        <label>Previous Queue Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__PreviousQueueName__c</fullName>
        <label>Previous Queue Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__PreviousUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up the user that was the previous owner of the case</description>
        <label>Previous User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CaseOwnerAuditTrailPreviousUser</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>wkitsm__StatusWhenChanged__c</fullName>
        <description>Case status when owner was changed</description>
        <label>Status When Changed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__TimeAssignedToPreviousOwner__c</fullName>
        <formula>IF(ISBLANK( wkitsm__Duration__c ),
 &apos;&apos;,
  IF( FLOOR( wkitsm__Duration__c / (24 * 3600)) = 1,
    &apos;1 day, &apos;,
    TEXT( FLOOR( wkitsm__Duration__c / (24 * 3600))) &amp; &apos; days, &apos;
  )
  

  &amp;
  IF (FLOOR( MOD( wkitsm__Duration__c, (3600 * 24 )) / 3600) = 1,
    &apos;1 hour, &apos;,
    TEXT( FLOOR( MOD( wkitsm__Duration__c, (3600 * 24 )) / 3600)) &amp; &apos; hours, &apos;
  )
 
  
  &amp;

  IF( FLOOR( MOD( wkitsm__Duration__c, 3600 ) / 60 ) = 1,
    &apos;1 minute, &apos;,
    TEXT( FLOOR( MOD( wkitsm__Duration__c, 3600 ) / 60 )) &amp; &apos; minutes, &apos; 
  )
  
  
  &amp;

  IF( MOD( wkitsm__Duration__c, 60) = 1,
    &apos;1 second&apos;,
    TEXT( MOD( wkitsm__Duration__c, 60)) &amp; &apos; seconds&apos;
  )
)</formula>
        <label>Time Assigned to Previous Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__TimeChanged__c</fullName>
        <description>Date/time of the case owner change</description>
        <label>Time Changed</label>
        <type>DateTime</type>
    </fields>
    <label>Case Owner Audit Trail</label>
    <nameField>
        <displayFormat>COAT-{0000}</displayFormat>
        <label>Case Owner Audit Trail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Owner Audit Trail</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>